@@ -1,10 +1,17 @@
 <registry>
-
-  <records interface="collective.recaptcha.settings.IReCaptchaSettings">
-     <value key="public_key">6LfrrNsSAAAAANk1fFBbI7s9eUt8yVwApIZCgMRM</value>
-     <value key="private_key">6LfrrNsSAAAAAHahMWnrsYALxYpz1XRqMqP3J_bU</value>
-  </records>
-   <record name="collective.categories.backend">
-    <value>archetypes.linguakeywordwidget</value>
-   </record>
+    <records interface="collective.recaptcha.settings.IReCaptchaSettings">
+        <value key="public_key">6LfrrNsSAAAAANk1fFBbI7s9eUt8yVwApIZCgMRM</value>
+        <value key="private_key">6LfrrNsSAAAAAHahMWnrsYALxYpz1XRqMqP3J_bU</value>
+    </records>
+    <record name="collective.categories.backend">
+        <value>archetypes.linguakeywordwidget</value>
+    </record>
+    <record name="collective.portlet.socialnetworks">
+        <value>
+            <element>facebook|https://www.facebook.com/cirbcibg</element>
+            <element>twitter|https://twitter.com/cirb_cibg</element>
+            <element>linkedin|http://www.linkedin.com/company/cirb_cibg</element>
+            <element>youtube|http://www.youtube.com/user/CIRBCIBG</element>
+        </value>
+    </record>
 </registry>
